@@ -10,10 +10,10 @@ A a;
 
 struct B
 {
-  B() throw (int) = default; // { dg-message "exception-specification" "" { target { ! c++17 } } }
+  B() throw (int) = default;
 };				// { dg-error "dynamic exception specification" "" { target c++17 } .-1 }
 				// { dg-warning "deprecated" "" { target { ! c++17 } } .-2 }
-B b;				// { dg-error "deleted" "" { target { ! c++17 } } }
+B b;
 
 struct C
 {
